# Bcraft

./: .env.example  .gitignore  README.md  docker-compose.yaml  pytest.ini
migrations/: env.py
migrations/versions/: 62d7144d123f_init.py
src/: Dockerfile  main.py  pyproject.toml
src/bcraft/: config.py  main.py  repository.py  session.py
src/bcraft/api/: deps.py  models.py  routes.py  schemas.py  services.py
src/migrations/: env.py
